add build_logo_detector_collab for collaboratory work

--- a/src/build_logo_detector.ipynb
+++ b/src/build_logo_detector.ipynb
@@ -859,7 +859,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -869,30 +869,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loading model..."
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2023-05-21 17:52:07.477413: I tensorflow/compiler/xla/stream_executor/cuda/cuda_gpu_executor.cc:996] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero. See more at https://github.com/torvalds/linux/blob/v6.0/Documentation/ABI/testing/sysfs-bus-pci#L344-L355\n",
-      "2023-05-21 17:52:07.478249: W tensorflow/core/common_runtime/gpu/gpu_device.cc:1956] Cannot dlopen some GPU libraries. Please make sure the missing libraries mentioned above are installed properly if you would like to use GPU. Follow the guide at https://www.tensorflow.org/install/gpu for how to download and setup the required libraries for your platform.\n",
-      "Skipping registering GPU devices...\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Done! Took 8.235520839691162 seconds\n"
+      "Loading model...Done! Took 8.566422462463379 seconds\n"
      ]
     }
    ],
@@ -922,31 +906,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
     "IMAGE_PATHS = ['/home/irizqy/ml_ws/bangkit-ws/data/bizit-dev_test-data/36_20230510_162147.jpg',\n",
-    "               '/home/irizqy/ml_ws/bangkit-ws/data/bizit-dev_test-data/12_IMG20230504165724.jpg',\n",
-    "               '/home/irizqy/ml_ws/bangkit-ws/data/bizit-dev_test-data/20_20230510_161931.jpg',]"
+    "               '/home/irizqy/ml_ws/bangkit-ws/data/bizit-dev_test-data/21_20230507_092258.jpg',\n",
+    "               '/home/irizqy/ml_ws/bangkit-ws/data/bizit-dev_test-data/IMG20230504165734.jpg',\n",
+    "               '/home/irizqy/ml_ws/bangkit-ws/data/bizit-dev_test-data/18_20230510_161318.jpg',\n",
+    "               '/home/irizqy/ml_ws/bangkit-ws/data/bizit-dev_test-data/48_IMG20230504165642.jpg',\n",
+    "               '/home/irizqy/ml_ws/bangkit-ws/data/bizit-dev_test-data/20230507_153048_mfnr.jpg']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Running inference for /home/irizqy/ml_ws/bangkit-ws/data/bizit-dev_test-data/36_20230510_162147.jpg... defaultdict(<class 'str'>, {(0.2317146360874176, 0.3359919786453247, 0.3352116644382477, 0.7213940620422363): 'Aqua'})\n",
+      "Running inference for /home/irizqy/ml_ws/bangkit-ws/data/bizit-dev_test-data/36_20230510_162147.jpg... "
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023-05-21 18:33:04.020468: I tensorflow/core/common_runtime/executor.cc:1197] [/device:CPU:0] (DEBUG INFO) Executor start aborting (this does not indicate an error and you can ignore this message): INVALID_ARGUMENT: You must feed a value for placeholder tensor 'input_tensor' with dtype uint8 and shape [1,?,?,3]\n",
+      "\t [[{{node input_tensor}}]]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "defaultdict(<class 'str'>, {(0.2317146360874176, 0.3359919786453247, 0.3352116644382477, 0.7213940620422363): 'Aqua'})\n",
       "Done\n",
-      "Running inference for /home/irizqy/ml_ws/bangkit-ws/data/bizit-dev_test-data/12_IMG20230504165724.jpg... defaultdict(<class 'str'>, {(0.27207693457603455, 0.11005356907844543, 0.37995490431785583, 0.911182165145874): 'Aqua', (0.26456883549690247, 0.11640459299087524, 0.35175302624702454, 0.6515470147132874): 'Aqua'})\n",
+      "Running inference for /home/irizqy/ml_ws/bangkit-ws/data/bizit-dev_test-data/21_20230507_092258.jpg... defaultdict(<class 'str'>, {(0.4010786712169647, 0.3208311200141907, 0.5512651801109314, 0.8352424502372742): 'Aqua', (0.6430822610855103, 0.5819905996322632, 0.7908734083175659, 0.8327145576477051): 'Chartreuse'})\n",
       "Done\n",
-      "Running inference for /home/irizqy/ml_ws/bangkit-ws/data/bizit-dev_test-data/20_20230510_161931.jpg... defaultdict(<class 'str'>, {})\n",
+      "Running inference for /home/irizqy/ml_ws/bangkit-ws/data/bizit-dev_test-data/IMG20230504165734.jpg... defaultdict(<class 'str'>, {})\n",
       "Done\n",
-      "Running inference for /home/irizqy/ml_ws/bangkit-ws/data/bizit-dev_test-data/40_20230507_094336.jpg... defaultdict(<class 'str'>, {(0.3223600387573242, 0.425650954246521, 0.431532084941864, 0.828102707862854): 'Aqua'})\n",
+      "Running inference for /home/irizqy/ml_ws/bangkit-ws/data/bizit-dev_test-data/18_20230510_161318.jpg... defaultdict(<class 'str'>, {(0.29713207483291626, 0.163152277469635, 0.400149405002594, 0.7827907800674438): 'Aqua'})\n",
+      "Done\n",
+      "Running inference for /home/irizqy/ml_ws/bangkit-ws/data/bizit-dev_test-data/48_IMG20230504165642.jpg... defaultdict(<class 'str'>, {(0.1591964066028595, 0.2566390335559845, 0.35990551114082336, 0.6217734813690186): 'Aqua'})\n",
+      "Done\n",
+      "Running inference for /home/irizqy/ml_ws/bangkit-ws/data/bizit-dev_test-data/20230507_153048_mfnr.jpg... defaultdict(<class 'str'>, {(0.12366199493408203, 0.33312585949897766, 0.7918562889099121, 0.679029107093811): 'Chartreuse'})\n",
       "Done\n"
      ]
     }
