Used EfficientNet for better performance Trained data with efficientNet for better perforamnce and experimenting on siamese network to find similarity score between images

--- a/src/build_logo_detector.ipynb
+++ b/src/build_logo_detector.ipynb
@@ -9,11 +9,11 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-05-24 00:18:46.468198: I tensorflow/tsl/cuda/cudart_stub.cc:28] Could not find cuda drivers on your machine, GPU will not be used.\n",
-      "2023-05-24 00:18:46.637701: I tensorflow/tsl/cuda/cudart_stub.cc:28] Could not find cuda drivers on your machine, GPU will not be used.\n",
-      "2023-05-24 00:18:46.638436: I tensorflow/core/platform/cpu_feature_guard.cc:182] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "2023-05-26 12:38:48.739871: I tensorflow/tsl/cuda/cudart_stub.cc:28] Could not find cuda drivers on your machine, GPU will not be used.\n",
+      "2023-05-26 12:38:48.910209: I tensorflow/tsl/cuda/cudart_stub.cc:28] Could not find cuda drivers on your machine, GPU will not be used.\n",
+      "2023-05-26 12:38:48.910775: I tensorflow/core/platform/cpu_feature_guard.cc:182] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
       "To enable the following instructions: AVX2 FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
-      "2023-05-24 00:18:47.762650: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Could not find TensorRT\n"
+      "2023-05-26 12:38:50.051602: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Could not find TensorRT\n"
      ]
     }
    ],
@@ -53,24 +53,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "PATH_TO_MODEL_DIR = 'ssd_mobilenet_v2_ft/'\n",
+    "PATH_TO_MODEL_DIR = 'efficientnet512_ft/'\n",
     "PATH_TO_LABELS = '/home/irizqy/ml_ws/bangkit-ws/data/label_map.pbtxt'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loading model...Done! Took 7.963697195053101 seconds\n"
+      "Loading model..."
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023-05-26 12:38:54.090121: I tensorflow/compiler/xla/stream_executor/cuda/cuda_gpu_executor.cc:996] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero. See more at https://github.com/torvalds/linux/blob/v6.0/Documentation/ABI/testing/sysfs-bus-pci#L344-L355\n",
+      "2023-05-26 12:38:54.090526: W tensorflow/core/common_runtime/gpu/gpu_device.cc:1956] Cannot dlopen some GPU libraries. Please make sure the missing libraries mentioned above are installed properly if you would like to use GPU. Follow the guide at https://www.tensorflow.org/install/gpu for how to download and setup the required libraries for your platform.\n",
+      "Skipping registering GPU devices...\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Done! Took 18.307851552963257 seconds\n"
      ]
     }
    ],
@@ -90,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,74 +116,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array(['10_20230507_095726.jpg', '17_20230507_092258.jpg',\n",
-       "       \"Carrabba's Italian Grill-44.jpg\", '24_20230510_161358.jpg',\n",
-       "       \"Carrabba's Italian Grill-44.jpg\"], dtype='<U31')"
-      ]
-     },
-     "execution_count": 25,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "import numpy as np\n",
-    "import os\n",
-    "\n",
-    "rand_im = np.random.choice(os.listdir('/home/irizqy/ml_ws/bangkit-ws/data/temp'), 5)\n",
-    "rand_im\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['/home/irizqy/ml_ws/bangkit-ws/data/temp/10_20230507_095726.jpg',\n",
-       " '/home/irizqy/ml_ws/bangkit-ws/data/temp/17_20230507_092258.jpg',\n",
-       " \"/home/irizqy/ml_ws/bangkit-ws/data/temp/Carrabba's Italian Grill-44.jpg\",\n",
-       " '/home/irizqy/ml_ws/bangkit-ws/data/temp/24_20230510_161358.jpg',\n",
-       " \"/home/irizqy/ml_ws/bangkit-ws/data/temp/Carrabba's Italian Grill-44.jpg\"]"
-      ]
-     },
-     "execution_count": 26,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "BASED_PATH = '/home/irizqy/ml_ws/bangkit-ws/data/temp'\n",
-    "IMAGE_PATHS = [os.path.join(BASED_PATH, im) for im in rand_im]\n",
-    "IMAGE_PATHS"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Running inference for /home/irizqy/ml_ws/bangkit-ws/data/temp/10_20230507_095726.jpg... defaultdict(<class 'str'>, {})\n",
+      "Running inference for /home/irizqy/ml_ws/bangkit-ws/data/test/7_20230510_161041.jpg... defaultdict(<class 'str'>, {})\n",
       "Done\n",
-      "Running inference for /home/irizqy/ml_ws/bangkit-ws/data/temp/17_20230507_092258.jpg... defaultdict(<class 'str'>, {(0.3763657212257385, 0.3562638759613037, 0.5385758280754089, 0.8214502334594727): 'Aqua', (0.36441770195961, 0.13157489895820618, 0.513726532459259, 0.33116307854652405): 'Chartreuse'})\n",
+      "Running inference for /home/irizqy/ml_ws/bangkit-ws/data/test/17_20230507_092258.jpg... defaultdict(<class 'str'>, {(0.37275806069374084, 0.12145353853702545, 0.5225242376327515, 0.3400805592536926): 'Chartreuse', (0.36121851205825806, 0.35893332958221436, 0.5373385548591614, 0.8045828342437744): 'Aqua', (0.646271288394928, 0.28119826316833496, 0.7014930844306946, 0.42326074838638306): 'Aqua'})\n",
       "Done\n",
-      "Running inference for /home/irizqy/ml_ws/bangkit-ws/data/temp/Carrabba's Italian Grill-44.jpg... defaultdict(<class 'str'>, {(0.32878565788269043, 0.5741132497787476, 0.41798990964889526, 0.6940445899963379): 'Aqua'})\n",
-      "Done\n",
-      "Running inference for /home/irizqy/ml_ws/bangkit-ws/data/temp/24_20230510_161358.jpg... defaultdict(<class 'str'>, {(0.4506187438964844, 0.05816996097564697, 0.6414238214492798, 0.896354615688324): 'Aqua'})\n",
-      "Done\n",
-      "Running inference for /home/irizqy/ml_ws/bangkit-ws/data/temp/Carrabba's Italian Grill-44.jpg... defaultdict(<class 'str'>, {(0.32878565788269043, 0.5741132497787476, 0.41798990964889526, 0.6940445899963379): 'Aqua'})\n",
+      "Running inference for /home/irizqy/ml_ws/bangkit-ws/data/test/31_20230510_161931.jpg... defaultdict(<class 'str'>, {(0.13620814681053162, 0.3898668587207794, 0.3163815140724182, 0.6464215517044067): 'Chartreuse'})\n",
       "Done\n"
      ]
     }
@@ -177,6 +137,16 @@
     "from PIL import Image\n",
     "import matplotlib.pyplot as plt\n",
     "import warnings\n",
+    "import os\n",
+    "\n",
+    "\n",
+    "rand_im = np.random.choice(os.listdir('/home/irizqy/ml_ws/bangkit-ws/data/test'), 3)\n",
+    "rand_im\n",
+    "\n",
+    "BASED_PATH = '/home/irizqy/ml_ws/bangkit-ws/data/test'\n",
+    "IMAGE_PATHS = [os.path.join(BASED_PATH, im) for im in rand_im]\n",
+    "IMAGE_PATHS\n",
+    "\n",
     "warnings.filterwarnings('ignore')   # Suppress Matplotlib warnings\n",
     "count = 0\n",
     "\n",
@@ -243,7 +213,7 @@
     "          category_index,\n",
     "          use_normalized_coordinates=True,\n",
     "          max_boxes_to_draw=200,\n",
-    "          min_score_thresh=.30,\n",
+    "          min_score_thresh=.35,\n",
     "          agnostic_mode=False)\n",
     "\n",
     "    plt.figure()\n",
@@ -259,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -268,23 +238,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# print(detections['detection_scores'])\n",
-    "# print(detections['detection_boxes'])\n",
-    "# print(detections['detection_classes'])\n",
-    "detections.items()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
     "width, height, _ = image_np.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.8888465  0.7940105  0.5593475  0.35204446 0.3131805  0.20242946\n",
+      " 0.20069684 0.15278015 0.14918803 0.13627309 0.12885123 0.12286025\n",
+      " 0.12188619 0.10864077 0.10621609 0.09073407 0.08411635 0.08162455\n",
+      " 0.081135   0.07932451 0.07764754 0.07757568 0.07507224 0.07210369\n",
+      " 0.07101718 0.06686036 0.06514898 0.06316725 0.06234721 0.05784463\n",
+      " 0.05766162 0.05717769 0.05652346 0.05472551 0.05293413 0.05291624\n",
+      " 0.05270847 0.05181587 0.04982031 0.0494574  0.04910188 0.04868054\n",
+      " 0.04734084 0.04691124 0.04607559 0.04591864 0.04591481 0.04541697\n",
+      " 0.04508835 0.04457164 0.04418835 0.04366131 0.04310258 0.04210387\n",
+      " 0.04198137 0.04126276 0.04100103 0.04066778 0.04019002 0.03998356\n",
+      " 0.03944269 0.03932796 0.03872728 0.03852287 0.03847083 0.03838234\n",
+      " 0.03831089 0.03799472 0.03677043 0.03671165 0.0355898  0.03538756\n",
+      " 0.03533013 0.03506214 0.03430734 0.03410344 0.03400818 0.0334891\n",
+      " 0.03273807 0.03230138 0.03210539 0.03207373 0.03169188 0.03165837\n",
+      " 0.03160166 0.03134772 0.03094308 0.03072072 0.03054597 0.03052688\n",
+      " 0.02966866 0.0295875  0.02957817 0.02935482 0.02935364 0.02909159\n",
+      " 0.02909091 0.02877716 0.02873887 0.02870063]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(detections['detection_scores'])"
    ]
   },
   {
@@ -304,9 +295,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "137 287 29 78\n"
+     ]
+    }
+   ],
    "source": [
     "ymin, xmin, ymax, xmax = detections['detection_boxes'][0]\n",
     "(left, right, top, bottom) = (xmin*width, xmax*width, ymin*height, ymax*height)\n",
@@ -315,21 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "im_top = cv.circle(image_np, (int(top), int(top+right)), 2, (0, 266, 0), 2)\n",
-    "# im_bot = \n",
-    "# im_right = \n",
-    "# im_lrft = \n",
-    "\n",
-    "Image.fromarray(im_top).save('top.jpg')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -339,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
