add cropped image to be process to similiarity model

--- a/src/logo-detector/im_similarity.ipynb
+++ b/src/logo-detector/im_similarity.ipynb
@@ -2,20 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "import tensorflow as tf\n",
-    "from tensorflow.keras import Model \n",
-    "from tensorflow.keras.layers import Input, Dense, Dropout\n",
-    "from tensorflow.keras.layers import Conv2D, GlobalAveragePooling2D, MaxPooling2D\n",
     "import numpy as np"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,27 +23,27 @@
     "        self.embedding_dim = embedding_dim\n",
     "    \n",
     "    def _build(self):\n",
-    "        inputs = Input(self.input_shape)\n",
+    "        inputs = tf.keras.layers.Input(self.input_shape)\n",
     "        \n",
-    "        x = Conv2D(64, (3, 3), padding='same', activation='relu')(inputs)\n",
-    "        x = MaxPooling2D()(x)\n",
-    "        x = Dropout(.2)(x)\n",
+    "        x = tf.keras.layers.Conv2D(64, (3, 3), padding='same', activation='relu')(inputs)\n",
+    "        x = tf.keras.layers.MaxPooling2D()(x)\n",
+    "        x = tf.keras.layers.Dropout(.2)(x)\n",
     "\n",
-    "        x = Conv2D(64, (3, 3), padding='same', activation='relu')(x)\n",
-    "        x = MaxPooling2D()(x)\n",
-    "        x = Dropout(.2)(x)\n",
+    "        x = tf.keras.layers.Conv2D(64, (3, 3), padding='same', activation='relu')(x)\n",
+    "        x = tf.keras.layers.MaxPooling2D()(x)\n",
+    "        x = tf.keras.layers.Dropout(.2)(x)\n",
     "\n",
-    "        pooled_output = GlobalAveragePooling2D()(x)\n",
-    "        outputs = Dense(self.embedding_dim)(pooled_output)\n",
+    "        pooled_output = tf.keras.layers.GlobalAveragePooling2D()(x)\n",
+    "        outputs = tf.keras.layers.Dense(self.embedding_dim)(pooled_output)\n",
     "\n",
-    "        model = Model(inputs, outputs)\n",
+    "        model = tf.keras.Model(inputs, outputs)\n",
     "\n",
     "        return model"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
